--- a/src/app/components/product-list/product-list.table.component.html
+++ b/src/app/components/product-list/product-list.table.component.html
@@ -10,8 +10,8 @@
      </thead>
     <tbody>
         <tr *ngFor="let tempProduct of products">
-            <td>
-                <img src="">
+            <td class="align-middle">
+                <img src="" height="50">
             </td>
             <td>{{tempProduct.name}}</td>
             <td>{{tempProduct.unitPrice | currency: 'USD'}}</td>
