--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a href="#">
-        <img src="assets/images/logo.png" alt="Organic Products" class="img-responsive">
+        <!-- <img src="assets/images/logo.png" alt="Organic Products" class="img-responsive"> -->
+        <img src=" " alt="Organic Products" class="img-responsive">
       </a>
     </div>
     <app-product-category-menu></app-product-category-menu>
