--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -1,25 +1,31 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
-       <div class="container-fluid">
+        <div class="container-fluid">
             <div class="row">
-                
+
                 <div *ngFor="let tempProduct of products" class="col-md-3">
-                     <div class="product-box">
+                    <div class="product-box">
+
+                        <!-- <a routerLink="/products/{{tempProduct.id}}">
+                        </a> -->
                         <img src="{{tempProduct.imageUrl}}" class="img-responsive">
+
                         <h1>{{tempProduct.name}}</h1>
+                        <!-- <a routerLink="/products/{{tempProduct.id}}">
+                        </a> -->
                         <div class="price"> {{tempProduct.unitPrice | currency: 'USD'}}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div *ngIf="products.length == 0" class="alert alert-warning col-md-12" role="alert">
-                        No products found.
+                <!-- <div *ngIf="products.length == 0" class="alert alert-warning col-md-12" role="alert">
+                    No products found.
 
                 </div>
-
+ -->
             </div>
 
-       </div>
+        </div>
     </div>
 
 
