--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -6,23 +6,23 @@
                 <div *ngFor="let tempProduct of products" class="col-md-3">
                     <div class="product-box">
 
-                        <!-- <a routerLink="/products/{{tempProduct.id}}">
-                        </a> -->
-                        <img src="{{tempProduct.imageUrl}}" class="img-responsive">
+                        <a routerLink="/products/{{tempProduct.id}}">
+                            <img src="{{tempProduct.imageUrl}}" class="img-responsive">
+                        </a>
 
-                        <h1>{{tempProduct.name}}</h1>
-                        <!-- <a routerLink="/products/{{tempProduct.id}}">
-                        </a> -->
+                        <a routerLink="/products/{{tempProduct.id}}">
+                            <h1>{{tempProduct.name}}</h1>
+                        </a>
                         <div class="price"> {{tempProduct.unitPrice | currency: 'USD'}}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
                 </div>
 
-                <!-- <div *ngIf="products.length == 0" class="alert alert-warning col-md-12" role="alert">
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
                     No products found.
 
                 </div>
- -->
+
             </div>
 
         </div>
