--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       </a>
     </div>
     <app-product-category-menu></app-product-category-menu>
-    
+
   </aside>
   <!-- END MENU SIDEBAR-->
 
@@ -20,14 +20,10 @@
         <div class="container-fluid">
           <div class="header-wrap">
 
-              <app-search>
-
-              </app-search>
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
+            <app-search></app-search>
+            
+            <app-cart-status></app-cart-status>
+            
           </div>
           <div class="account-wrap"></div>
         </div>
@@ -35,7 +31,7 @@
     </header>
     <!-- END HEADER DESKTOP-->
 
-    <!-- MAIN CONTENT-->
+    <!-- MAIN CONTENT-->  
 
     <router-outlet></router-outlet>
   </div>
