Credit Card Expirations completed

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -169,7 +169,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth" type="text">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let month of creditCardMonths">
+                                        {{ month }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -178,8 +180,10 @@
                         <div class="col-md-2"> <label>Expiration Year</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="expirationYear" type="text">
-                                    <option>TO DO</option>
+                                <select formControlName="expirationYear" type="text" (change)="handleMonthsAndYears()">
+                                    <option *ngFor="let year of creditCardYears ">
+                                        {{ year }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
