--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -11,6 +11,13 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+                                <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="alert alert-danger mt-1"></div>
+                                <div *ngIf="firstName.errors.required">
+                                        First Name is required
+                                </div>
+                                <div *ngIf="firstName.errors.minlength">
+                                        First Name must be at least 2 characters long
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -20,6 +27,13 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+
+                                <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="alert alert-danger mt-1"></div>
+                                <div *ngIf="lastName.errors.required">
+                                        Last Name is required
+                                </div>
+                                <div *ngIf="lastName.errors.minlength">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -59,8 +73,22 @@
                         <div class="col-md-2"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)="getStates('shippingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{ country.name }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2"> <label>State</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="state">
+                                    <option *ngFor="let state of shippingAddressState" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -75,12 +103,13 @@
                     </div>
                 </div>
                 <!-- Add checkbox to copy shipping to billing -->
-                    <div class="input-space">
-                        <label class="au-checkbox">
-                            <input type="checkbox" (change)="copyShippingAddressToBillingAddress($event)">
-                            <span class="au-checkmark"></span> Billing Address same as Shipping Address
-                        </label>
-                    </div>
+                <div class="input-space">
+                    <label class="au-checkbox">
+                        <input type="checkbox" (change)="copyShippingAddressToBillingAddress($event)">
+                        <span class="au-checkmark"></span> Billing Address same as Shipping Address
+                    </label>
+                </div>
+
                 <!-- Billing Address -->
                 <div formGroupName="billingAddress" class="form-area">
                     <h3>Billing Address</h3>
@@ -107,12 +136,28 @@
                         <div class="col-md-2"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)="getStates('billingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{ country.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-2"> <label>State</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="state">
+                                    <option *ngFor="let state of billingAddressState" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-md-2"> <label>Zip Code</label></div>
                         <div class="col-md-9">
@@ -122,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- Credit Card -->
                 <div formGroupName="creditCard" class="form-area">
                     <h3>Credit Card</h3>
